--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,15 @@
     margin: 50px 0 50px 15px;
 }
 
-.inputTodo {
+.Form .inputTodo {
     font-size: 24px;
     padding: 10px;
 }
 
-.Todo {
+.List {
     font-size: 24px;
+}
+
+.List input[type=checkbox] {
+    margin-right: 10px;
 }
