--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@
     font-size: 24px;
 }
 
+.List .done {
+    text-decoration: line-through;
+}
+
 .List input[type=checkbox] {
     margin-right: 10px;
 }
